--- a/ToDo-List/ToDo-List.vcxproj
+++ b/ToDo-List/ToDo-List.vcxproj
@@ -127,6 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="global_variable.c" />
     <ClCompile Include="main.c" />
     <ClCompile Include="main_ui.c" />
   </ItemGroup>
