--- a/ToDo-List/ToDo-List.vcxproj
+++ b/ToDo-List/ToDo-List.vcxproj
@@ -128,6 +128,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="global_variable.c" />
+    <ClCompile Include="login.c" />
     <ClCompile Include="main.c" />
     <ClCompile Include="main_ui.c" />
   </ItemGroup>
