--- a/ToDo-List/ToDo-List.vcxproj
+++ b/ToDo-List/ToDo-List.vcxproj
@@ -127,10 +127,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="appendFile.c" />
+    <ClCompile Include="category.c" />
+    <ClCompile Include="friends.c" />
     <ClCompile Include="global_variable.c" />
     <ClCompile Include="login.c" />
     <ClCompile Include="main.c" />
     <ClCompile Include="main_ui.c" />
+    <ClCompile Include="teams.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="function.h" />
